RESOLVED FIXED56601
Command-period does not stop load when page has focus in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=56601
Summary Command-period does not stop load when page has focus in WebKit2
Darin Adler
Reported 2011-03-17 15:37:59 PDT
Command-period does not stop load when page has focus in WebKit2
Attachments
Patch (4.05 KB, patch)
2011-03-17 16:11 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2011-03-17 16:11:11 PDT
Darin Adler
Comment 2 2011-03-18 12:15:35 PDT
Comment on attachment 86108 [details] Patch Clearing flags on attachment: 86108 Committed r81493: <http://trac.webkit.org/changeset/81493>
Darin Adler
Comment 3 2011-03-18 12:15:38 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2011-03-18 12:33:23 PDT
http://trac.webkit.org/changeset/81493 might have broken Windows Release (Build) and Windows Debug (Build)
Darin Adler
Comment 5 2011-03-28 13:14:16 PDT
Note You need to log in before you can comment on or make changes to this bug.